after dashboard layout with all basic layout ready

--- a/chargebackcalculator/public/index.html
+++ b/chargebackcalculator/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link  rel="stylesheet"  src="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css"></link>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <title>ChargeBack Calculator</title>
   </head>
   <body>
